--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.10,<3.13"
 dependencies = [
     "black>=24.10.0",
     "ipython>=8.28.0",
+    "matplotlib>=3.9.2",
     "networkx>=3.4.1",
     "numpy>=2.1.2",
     "openai>=1.51.2",
